@@ -3,7 +3,7 @@ Section: tex
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Fathi Boudra <fboudra@free.fr>, Mark Purcell <msp@debian.org>, Ana Beatriz Guerrero Lopez <ana@ekaia.org>
-Build-Depends: cdbs, debhelper (>= 5), kdelibs4-dev
+Build-Depends: cdbs, debhelper (>= 5), kdelibs4-dev, libtool, automake1.9, autoconf
 Standards-Version: 3.7.2
 
 Package: kile
